--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>zone.glueck</groupId>
     <artifactId>sqlplot</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <build>
         <plugins>
